--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 <title>{% block title %}Welcome!{% endblock %}</title>
 {% block stylesheets %}
-<link rel="stylesheet" href="bootstrap.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 {% endblock %}</head><body>
-{% block body %}{% endblock %}
+{% block body %}
+{% endblock %}
 {% block javascripts %}
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 {% endblock %}
