--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="jumbotron jumbotron-fluid"><div class="container"><h1 class="display-4">Movie Rating</h1>
+<div class="text-light bg-dark jumbotron jumbotron-fluid"><div class="container"><h1 class="display-4">Movie Rating</h1>
 <p class="lead">Le premier site français pour évaluer les films tout pourris produits par le cinéma français</p>
 </div>
 </div>
@@ -30,7 +30,7 @@
 <div class="container">
 <h2>{% block pageTitle %}{% endblock %}</h2>{% block main %}{% endblock %}
 </div>
-<div class="jumbotron jumbotron-fluid">
+<div class="text-light bg-dark jumbotron jumbotron-fluid">
 <div class="container">
 <p class="lead">Si vous êtes un réalisateur français et que vous vous plaigniez des notes attribuées à votre navet, il ne fallait pas produire une telle bouze. XOXO</p>
 </div>
