--- a/templates/test/index.html.twig
+++ b/templates/test/index.html.twig
@@ -1,52 +1,10 @@
-<!-- Plus tar on essaierra d'intégrer un formulair de notation sur page -->
-<!-- <form>
-  <div class="form-group">
-    <label for="exampleFormControlInput1">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Example select</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect2">Example multiple select</label>
-    <select multiple class="form-control" id="exampleFormControlSelect2">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-</form> -->
-
-
-
-
-
-
-
-
-
-
-
 
 
 {% extends 'layout.html.twig' %}
 
-{% block title %}Accueil
+{% block title %}Accueil{% endblock %}
 
-{% block pageTitle %}Accueil
+{% block pageTitle %}Accueil{% endblock %}
 
 {% block main %}
 {% for m in ms %}
@@ -60,4 +18,36 @@
 </div>
 </div>
 {% endfor %}
+
+<!-- Plus tar on essaierra d'intégrer un formulair de notation sur page -->
+<!-- <form>
+<div class="form-group">
+<label for="exampleFormControlInput1">Email address</label>
+<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+</div>
+<div class="form-group">
+<label for="exampleFormControlSelect1">Example select</label>
+<select class="form-control" id="exampleFormControlSelect1">
+<option>1</option>
+<option>2</option>
+<option>3</option>
+<option>4</option>
+<option>5</option>
+</select>
+</div>
+<div class="form-group">
+<label for="exampleFormControlSelect2">Example multiple select</label>
+<select multiple class="form-control" id="exampleFormControlSelect2">
+<option>1</option>
+<option>2</option>
+<option>3</option>
+<option>4</option>
+<option>5</option>
+</select>
+</div>
+<div class="form-group">
+<label for="exampleFormControlTextarea1">Example textarea</label>
+<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+</form> -->
 {% endblock %}
