--- a/templates/test/evaluation.html.twig
+++ b/templates/test/evaluation.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Evaluation{% endblock %}
 
-{% block pageTitle %}Evaluer : {{ a.title }}{% endblock %}
+{% block pageTitle %}Evaluer : {{ movie.title }}{% endblock %}
 
 {% block main %}
 {{ form($form) }}
